--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.2",
+    "firebase": "^4.11.0",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
     "vue-instant": "^1.0.2",
