--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
     "vue-instant": "^1.0.2",
+    "vue-logger": "0.0.3",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
