--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "^2.0.0-rc.2",
     "firebase": "^4.11.0",
     "vue": "^2.5.2",
