--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.4",
+    "@fortawesome/fontawesome-free-solid": "^5.0.8",
+    "@fortawesome/vue-fontawesome": "0.0.22",
     "axios": "^0.18.0",
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "^2.0.0-rc.2",
     "firebase": "^4.11.0",
+    "lodash": "^4.17.5",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
     "vue-i18n": "^7.6.0",
     "vue-instant": "^1.0.2",
+    "vue-lodash": "^1.0.4",
     "vue-logger": "0.0.3",
     "vue-router": "^3.0.1"
   },
