--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-lodash": "^1.0.4",
     "vue-logger": "0.0.3",
     "vue-router": "^3.0.1"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
