--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "vue-instant": "^1.0.2",
     "vue-lodash": "^1.0.4",
     "vue-logger": "0.0.3",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
