--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap-vue": "^2.0.0-rc.2",
     "firebase": "^4.11.0",
     "lodash": "^4.17.5",
+    "npm": "^5.7.1",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
     "vue-i18n": "^7.6.0",
