--- a/package.json
+++ b/package.json
@@ -18,17 +18,18 @@
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "^2.0.0-rc.2",
     "firebase": "^4.11.0",
+    "jquery": "^1.9.1",
     "lodash": "^4.17.5",
     "npm": "^5.7.1",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
     "vue-i18n": "^7.6.0",
     "vue-instant": "^1.0.2",
-    "vue-lodash": "^1.0.4",
     "vue-logger": "0.0.3",
     "vue-masonry": "^0.10.17",
     "vue-progressive-image": "^2.4.4",
     "vue-router": "^3.0.1",
+    "vue-underscore": "^0.1.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
