--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "firebase": "^4.11.0",
     "jquery": "^1.9.1",
     "lodash": "^4.17.5",
+    "moment": "^2.21.0",
     "npm": "^5.7.1",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
     "vue-i18n": "^7.6.0",
     "vue-instant": "^1.0.2",
     "vue-logger": "0.0.3",
+    "vue-momentjs": "^0.1.2",
     "vue-progressive-image": "^2.4.4",
     "vue-router": "^3.0.1",
     "vue-underscore": "^0.1.4",
