--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.21.0",
     "npm": "^5.7.1",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-axios": "^2.0.2",
     "vue-i18n": "^7.6.0",
     "vue-instant": "^1.0.2",
