--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/fontawesome-svg-core": "^1.2.0",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0",
     "@fortawesome/vue-fontawesome": "0.0.22",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
@@ -28,6 +30,7 @@
     "vue-i18n": "^7.6.0",
     "vue-instant": "^1.0.2",
     "vue-linkify": "^1.0.1",
+    "vue-localstorage": "^0.6.2",
     "vue-logger": "0.0.3",
     "vue-momentjs": "^0.1.2",
     "vue-progressive-image": "^2.5.0",
